# smart-procurement

./: .env.example  pyproject.toml  requirements.txt
data/: etl.py
db/: 001_create_tables.sql  002_sales_context.sql
docs/: CARD-02.md  CARD-03.md  CARD-04.md  CARDS.md  PRD_Agentic_Purchase_Assistant.md
ml/: encoders.json  feature_matrix.parquet  features.py
test/: test_features.py  test_tools.py
tools/: sql_tools.py
