[project]
name = "procurement-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "kaggle>=2.2.2",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]
